# AI-Employee-Heckathon

./: .gitignore  Company_Handbook.md  Dashboard.md  Plan.md  README.md  client_email.txt  filesystem_watcher.py  gemini_test.py  gmail_test.py  last_processed_email.json  main.py  pyproject.toml
.claude/plans/: declarative-zooming-hanrahan.md
.obsidian/: graph.json  workspace.json
Inbox/: Bronze Tier Completed.txt
Needs_Action/: test.py
Plans/: processing_plan.md
heckathon/: main.py  pyproject.toml
mcp/: action_server.py
skills/: linkedin_skill.py  planning_skill.py
utils/: obsidian.py
watchers/: gmail_watcher.py  linkedin_activity.json  linkedin_watcher.py
